--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.2.6",
     "@mui/styles": "^5.2.3",
     "@react-google-maps/api": "^2.7.0",
