--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-react": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^3.1.1",
     "react-scripts": "5.0.0",
     "react-swipeable-views": "^0.14.0",
     "react-tiktok": "^1.0.0",
