--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "drag-drop": "^7.2.0",
     "firebase": "^9.6.6",
+    "firebase-admin": "^10.0.2",
+    "googleapis": "^97.0.0",
     "lottie-react": "^2.2.1",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.3.4",
     "react-material-ui-carousel": "^3.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-swipeable-views": "^0.14.0",
     "react-tiktok": "^1.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "xlsx": "^0.18.4"
   },
   "scripts": {
     "start": "react-scripts start",
