--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "drag-drop": "^7.2.0",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
@@ -21,6 +22,7 @@
     "lottie-react": "^2.2.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.4",
     "react-material-ui-carousel": "^3.1.1",
