--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.2.6",
     "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.7.0",
     "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
