--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^0.26.1",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "drag-drop": "^7.2.0",
@@ -23,6 +26,7 @@
     "googleapis": "^97.0.0",
     "lottie-react": "^2.2.1",
     "path": "^0.12.7",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
@@ -32,6 +36,9 @@
     "react-scripts": "5.0.0",
     "react-swipeable-views": "^0.14.0",
     "react-tiktok": "^1.0.0",
+    "react-to-print": "^2.14.6",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.2",
     "xlsx": "^0.18.4"
   },
@@ -58,5 +65,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
